src/app/modules/my-results/my-results.component.scss
.banner {
  height: 133px;
  background-image: url("/assets/img/Rectangle 170.png");
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: center;
  .banner-title {
    font-family: var(--heading-font-family);
    font-size: 48px;
    line-height: 72px;
  }
}

.grid {
  margin-top: 2rem;
  margin-bottom: 3rem;
  display: grid;
  grid-template-columns: 2fr 1fr;
  gap: 20px;
  & > div {
    padding: 20px;
    background-color: azure;

    border: 1px solid var(--color-border);
    border-radius: 8px;
    background-color: var(--color-body);
  }

  .block-results {
    grid-column: 1/2;
    grid-row: 1/4;

    padding: 20px;
    .header {
      width: 100%;
      display: flex;
      justify-content: space-between;

      label {
        margin-right: 10px;
        font-weight: 600;
      }
      select {
        outline: 0;
        border: 1px solid var(--color-border);
        min-width: 130px;
        padding: 3px 5px;
        background-color: var(--color-body);
      }
    }

    .no-results {
      margin-top: 50px;
      text-align: center;
      vertical-align: middle;
    }

    .assessments-wrapper {
      .each-block {
        cursor: pointer;
        margin: 20px 0;
        padding: 2px;
        border-radius: 8px;
        background: linear-gradient(
          90deg,
          rgba(68, 206, 246, 1) 0%,
          rgba(142, 209, 133, 1) 100%
        );
        .inner {
          border-radius: 6px;
          background: var(--color-body);
          display: grid;
          grid-template-columns: min-content auto 120px min-content;
          padding: 20px;

          h3 {
            font-family: var(--heading-font-family);
            line-height: 20px;
            font-weight: 500;
            font-size: 20px;
            align-self: flex-end;
            margin-left: 10px;
          }

          .date {
            align-self: center;
          }
          .icon-chevron {
            margin-left: 20px;
            margin-top: 6px;
          }
        }
      }
    }
  }
  .block-chart {
    grid-column: 2/3;
    grid-row: 1/3;
    h2 {
      font-family: var(--heading-font-family);
      font-size: 28px;
      font-weight: 500;
      line-height: 34px;
    }
    .chart {
      height: 335px;
      background-color: var(--color-body);
    }
  }
  .block-due-date {
    grid-column: 2/3;
    grid-row: 3/5;

    padding: 20px;
    h3 {
      font-family: var(--heading-font-family);
      font-size: 20px;
      font-weight: 500;
      line-height: 30px;
    }
  }
  .block-result-footer {
    grid-column: 1/2;
    grid-row: 4/5;
    padding: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    h3 {
      font-family: var(--heading-font-family);
      font-size: 28px;
      font-weight: 500;
      line-height: 34px;
    }
    button {
      width: fit-content;
      white-space: nowrap;
      margin-left: 50px;
    }
  }
}

@media screen and (max-width: 991px) {
  .banner {
    height: 82px;
    .banner-title {
      font-size: 28px;
      line-height: 34px;
    }
  }

  .grid {
    margin: 1rem auto;
    display: grid;
    grid-template-columns: 1fr;
    gap: 20px;
    & > div {
      padding: 10px;
    }

    .block-results {
      grid-column: 1/2;
      grid-row: 1/2;

      .header {
        label {
        }
        select {
        }
      }

      .no-results {
      }

      .assessments-wrapper {
        .each-block {
          .inner {
            grid-template-columns: auto auto auto;
            padding: 20px 10px;
            .icon-file {
              grid-column: 1/2;
              grid-row: 1/3;
              margin-right: 10px;
            }
            h3 {
              grid-column: 2/3;
              grid-row: 1/2;
              margin: 0;
              margin-bottom: 5px;
            }

            .date {
              grid-column: 2/3;
              grid-row: 2/3;
            }
            .icon-chevron {
              grid-column: 3/4;
              grid-row: 1/3;
              justify-self: flex-end;
            }
          }
        }
      }
    }
    .block-chart {
      grid-column: 1/2;
      grid-row: 2/3;
      h2 {
        font-size: 24px;
      }
      .chart {
      }
    }
    .block-due-date {
      grid-column: 1/2;
      grid-row: 4/5;

      h3 {
      }
    }
    .block-result-footer {
      grid-column: 1/2;
      grid-row: 3/4;

      display: block;
      h3 {
        font-size: 24px;
      }
      button {
        margin: 10px 0;
        width: 100%;
      }
    }
  }
}

